welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:10: error: reassignment to val
	x=x+1}
         ^ZigZag:19: error: reassignment to val
	x=x-1
         ^